[tool.poetry]
name = "nthp-api"
version = "0.1.0"
description = ""
authors = ["Will Pimblett <will@wjdp.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pydantic = "^1.8.2"
python-frontmatter = "^1.0.0"
peewee = "^3.14.8"
python-slugify = "^5.0.2"
pyhumps = "^3.0.2"
click = "^8.0.3"
coloredlogs = "^15.0.1"
pydantic-collections = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-vcr = "^1.0.2"
mypy = "^0.910"
pytest-depends = "^1.0.1"
types-python-slugify = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9" 
files = "src"
show_error_context = true
pretty = true
ignore_missing_imports = true
