[tool.poetry]
name = "nthp-api"
version = "0.1.0"
description = ""
authors = ["Will Pimblett <will@wjdp.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
python-frontmatter = "^1.0.0"
peewee = "^3.16.2"
python-slugify = "^8.0.1"
pyhumps = "^3.8.0"
click = "^8.1.3"
coloredlogs = "^15.0.1"
pydantic-collections = "^0.4.0"
Markdown = "^3.4.3"
PyYAML = "^6.0"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-vcr = "^1.0.2"
mypy = "^1.3.0"
pytest-depends = "^1.0.1"
types-python-slugify = "^8"
types-Markdown = "^3.3.7"
freezegun = "^1.2.2"
types-PyYAML = "^6.0.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9" 
files = "src"
pretty = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
